# mcp-builder

./: .gitignore  LICENSE  README.md  pyproject.toml
mcp_builder/: server.py
