[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-builder"
version = "0.1.0"
description = "A Python MCP server to install other MCP servers"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "mcp>=1.5.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
]

[project.scripts]
mcpbuilder = "mcp_builder.server:main"

[tool.setuptools]
packages = ["mcp_builder"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"